base/garage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-ingress
  namespace: garage
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage-svc
                port:
                  number: 9001
  tls:
  - hosts:
    - garage
